syntax = "proto3";

package com.example.boundedContext.api;

import "com/example/bounded-context/domain/service2_domain.proto";
import "kalix/annotations.proto";

service Service2Service {
    option (kalix.codegen).action = {
        name: "com.example.boundedContext.api.Service2Impl"
    };

    rpc DoNothing (boundedContext.domain.DoNothingCommand2) returns (boundedContext.domain.DoNothingResponse2);
}
