syntax = "proto3";

package com.example.boundedContext.domain;

//Records

message DoNothingCommand2 {
    DoNothing2 nothing = 1;
}

message DoNothingResponse2 {
    DoNothing2 value = 1;
}

message DoNothing2 {}

message NoState2 {}
